[package]
name = "varlen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
varlen_macro = { version = "0.1", path = "../varlen_macro" }
bumpalo = { version = "3.9.1", optional = true }
svgbobdoc = { version = "0.3.0-alpha", optional = true }

[features]
doc = ["svgbobdoc/enable"]