[package]
name = "varlen_example"
version = "0.1.1"
edition = "2021"
description = "Ergonomic variable-length types, example generated code"
repository = "https://github.com/reinerp/varlen-rs"
homepage = "https://github.com/reinerp/varlen-rs"
license = "BSD-3-Clause"
include = [
	"Cargo.toml",
	"LICENSE",
	"src/**/*.rs",
    "shouldfail/*.rs",
    "shouldfail/*.stderr",
    "README.md",
]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
varlen = { version = "0.1", path = "../varlen", features = ["macro"] }

[dev-dependencies]
trybuild = "1.0.54"