[package]
name = "varlen_macro"
authors = ["Reiner Pope <reiner.pope@gmail.com>"]
version = "0.1.1"
edition = "2021"
description = "Ergonomic variable-length types, procedural macros"
repository = "https://github.com/reinerp/varlen-rs"
homepage = "https://github.com/reinerp/varlen-rs"
include = [
	"Cargo.toml",
	"LICENSE",
	"src/**/*.rs",
    "README.md",
]
license = "BSD-3-Clause"
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.85", features = ["derive", "parsing", "extra-traits", "full", "visit"] }
quote = "1.0.14"
lazy_static = "1.4.0"
proc-macro2 = "1.0.36"
convert_case = "0.5.0"

[dev-dependencies]
varlen = { version = "0.1.0", path = "../varlen" }
